# stirrings_still

./: .gitignore  .gitmodules  .travis.yml  README.md  pyproject.toml  setup.py
.github/workflows/: main.yml
source/stirrings_still/: library.py  stylesheet.ily  text-markups.ily
stirrings/: __init__.py  __metadata__.py
stirrings/etc/: materials.md  segments.md  source.md  stages.md  text.md
stirrings/tools/: SegmentMaker.py
stirrings_still/: ScoreTemplate.py  __init__.py  __metadata__  __metadata__.py  library.py  stylesheet.ily  text-markups.ily  tools.py
stirrings_still/builds/: .gitignore
stirrings_still/etc/: arrival.md  arrival.txt  candidates.md  concordance.md  dramaturgy.md  germinata.md  multiphonics.md  multiphonics.txt  relata.md  relata.txt  segments.md  sites-classes.md  source.md  text.md  to-do.md
stirrings_still/materials/: __init__.py
stirrings_still/sections/: stylesheet.ily
stirrings_still/segments/: stylesheet.ily
stirrings_still/stylesheets/: annotation-spanners.ily  context-definitions.ily  contexts.ily  markups.ily  nonfirst-segment.ily  partial-markups.ily  stylesheet.ily  text-markups.ily
stirrings_still/tools/: FirstOrderStageSpecifier.py  Operation.py  Relatum.py  ScoreTemplate.py  StageSpecifier.py  StageToken.py  __init__.py  accelerandi.py  accelerando.py  bcps.py  breathe.py  cello_cell.py  cello_cell_bcps.py  circle_annotation_spanner.py  circle_rhythm.py  circle_spanner.py  circles.py  clockticks.py  clouded_pane.py  clouded_pane_annotation_spanner.py  clouded_pane_spanner.py  continuous_tremolo.py  declamation.py  (+49 more)
(+1025 files in other folders)
