[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stirrings_still"
version = "3.30"
description = "Stirrings Still (2016-18/24) for narrator & string quartet"
authors = [{ name = "Trevor BaÄa", email = "trevor.baca@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
keywords = ["abjad", "lilypond", "music composition", "music notation"]
dependencies = ["abjad>=3.30"]

[project.urls]
Homepage = "https://github.com/trevorbaca/stirrings_still"

[tool.setuptools]
packages = ["stirrings_still"]
package-dir = { "" = "source" }
